--- a/app/src/main/res/drawable/ic_splash_logo.xml
+++ b/app/src/main/res/drawable/ic_splash_logo.xml
@@ -1,8 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
+    android:width="192dp"
+    android:height="192dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
+    <path
+        android:fillColor="@color/launcher_background_purple"
+        android:pathData="M0,0h108v108h-108z" />
+
+
     <group
         android:pivotX="54"
         android:pivotY="54"
